# BREADY

./: CMakeLists.txt  README.md  short_read_connector.sh
test/: bank  testBREADY.fa
tools/: CMakeLists.txt
tools/BREADY/: CMakeLists.txt
tools/BREADY/src/: BREADY.cpp  main.cpp
tools/SRC_linker_ram/src/: SRC_linker_ram.cpp
